--- a/css/popup.css
+++ b/css/popup.css
@@ -1,6 +1,7 @@
 body{
   width: 400px;
-  margin: 0px;
+  height: 500px;
+  margin: 16px;
   background-color: #fff;
   min-width: 357px;
   overflow-x: hidden;
